--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,11 +8,11 @@
       "type": "image/x-icon"
     },
     {
-      "type": "image/png",
+      "type": "image/jpg",
       "sizes": "192x192"
     },
     {
-      "type": "image/png",
+      "type": "image/jpg",
       "sizes": "512x512"
     }
   ],
